# auto-doc-rs

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
_docs/: PROJECT_OVERVIEW.md  README.md  cli.md  main.md  settings.md
_docs/analysis/: README.md  display.md  mod.md  summary.md
_docs/analysis/prompt/: README.md  mod.md
_docs/crawler/: README.md  file.md  mod.md
_docs/generate/: README.md  mod.md
_docs/llm_interface/: README.md  exceptions.md  extract_json.md  mod.md  models.md  simplified_schema.md
_docs/llm_interface/client/: README.md  analyser.md  builder.md  mod.md
_docs/llm_interface/pool/: README.md  builder.md  mod.md
_docs/output/: README.md  file_system.md  mod.md
_test/: README.md  cli.md  main.md  settings.md
doc-generator/: Cargo.toml
doc-generator/_docs/: README.md
doc-generator/_docs/analysis/: README.md  mod.md  summary.md
doc-generator/_docs/crawler/: mod.md
doc-generator/_docs/generate/: mod.md
doc-generator/_docs/llm_interface/: extract_json.md  models.md
doc-generator/_docs/output/: file_system.md
doc-generator/src/: cli.rs  settings.rs
doc-generator/src/analysis/: display.rs  mod.rs  summary.rs
doc-generator/src/generate/: mod.rs
doc-generator/src/llm_interface/: models.rs  simplified_schema.rs
doc-reader/: Cargo.toml
doc-reader/_docs/: README.md  main.md  settings.md
doc-reader/_docs/tools/: README.md  get_docs.md  mod.md
doc-reader/src/: main.rs  settings.rs
doc-reader/src/tools/: get_docs.rs  mod.rs
src/: cli.rs  main.rs  settings.rs
src/analysis/: mod.rs  summary.rs
src/crawler/: file.rs
src/generate/: mod.rs
src/llm_interface/: exceptions.rs  extract_json.rs  mod.rs  models.rs
src/llm_interface/client/: analyser.rs  builder.rs  mod.rs
src/llm_interface/pool/: analyser.rs  builder.rs  mod.rs
src/output/: file_system.rs
(+21 files in other folders)
