[package]
name = "auto-docrs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive"] }
config = "0.15.11"
glob = "0.3.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
serial_test = "3.2.0"
tempfile = "3.20.0"
thiserror = "2.0.12"
toml = "0.8.22"
