[package]
name = "auto-doc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
clap = { version = "4.5.38", features = ["derive"] }
clap_complete = "4.5.51"
config = "0.15.11"
dotenv = "0.15.0"
glob = "0.3.2"
indicatif = "0.17.11"
llm = "1.2.8"
mockall = "0.13.1"
once_cell = "1.21.3"
regex = "1.11.1"
schemars = "0.8.22"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
serial_test = "3.2.0"
strum = "0.27.1"
strum_macros = "0.27.1"
tempfile = "3.20.0"
thiserror = "2.0.12"
tokio = "1.45.1"
toml = "0.8.22"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
